--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
 version: '3'
 services:
   app:
-    container_name: laravel-post-app
+    container_name: laravel-app
     ports:
-      - "8000:8000"
-    build:
-      context: .
-      dockerfile: Dockerfile
+      - "8080:80"
+    build: ./Docker/App
     volumes:
       - ./src:/var/www/html
 
@@ -31,6 +29,6 @@ services:
     image: adminer:4.7.5
     restart: always
     ports:
-      - 8000:8000
+      - 8088:8080
     depends_on:
       - db
