--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,10 @@ services:
   app:
     container_name: laravel-app
     ports:
-        - "8080:80"
+      - "8080:80"
     build: ./Docker/App
     volumes:
       - ./src:/var/www/html
-
   db:
     image: mysql:5.7
     container_name: laravel_db
@@ -15,20 +14,20 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: laraveldb
       MYSQL_USER: dbuser
-      MYSQL_PASSWORD: dbpassword
+      MYSQL_PASSWORD: dbpass
       TZ: 'Asia/Tokyo'
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
       - ./Docker/DB/volume:/var/lib/mysql
       - ./Docker/DB/my.cnf:/etc/mysql/conf.d/my.cnf
     ports:
-      - "13306:3306"
+      - 13306:3306
   adminer:
     container_name: adminer
     hostname: adminer
     image: adminer:4.7.5
     restart: always
     ports:
-      - 8081:8081
+      - 8088:8080
     depends_on:
       - db
